--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-dom": "^19.2.0",
     "react-hook-form": "^7.69.0",
     "recharts": "^3.6.0",
+    "resend": "^6.6.0",
     "tailwind-merge": "^3.4.0",
     "tailwindcss": "^4.0.6",
     "zustand": "^5.0.9"
