--- a/vercel.json
+++ b/vercel.json
@@ -20,7 +20,7 @@
       ]
     },
     {
-      "source": "/workbox-*.js",
+      "source": "/workbox-(.*).js",
       "headers": [
         {
           "key": "Cache-Control",
