--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@types/node": "^25.0.3",
     "@types/react": "^19.2.0",
     "@types/react-dom": "^19.2.0",
+    "@vercel/node": "^5.5.16",
     "@vitejs/plugin-react": "^5.0.4",
     "jsdom": "^27.0.0",
     "prettier": "^3.5.3",
