--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "type": "module",
   "scripts": {
     "dev": "vite --port 3000",
-    "build": "vite build && tsc",
+    "build": "vite build && tsc && node scripts/prerender.mjs",
+    "build:no-prerender": "vite build && tsc",
+    "prerender": "node scripts/prerender.mjs",
     "preview": "vite preview",
     "add:component": "bunx --bun shadcn@latest add",
     "test": "vitest run",
@@ -28,6 +30,7 @@
     "moment": "^2.30.1",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-helmet-async": "^2.0.5",
     "react-hook-form": "^7.69.0",
     "recharts": "^3.6.0",
     "resend": "^6.6.0",
@@ -47,6 +50,8 @@
     "@vitejs/plugin-react": "^5.0.4",
     "jsdom": "^27.0.0",
     "prettier": "^3.5.3",
+    "puppeteer": "^24.34.0",
+    "serve-handler": "^6.1.6",
     "tw-animate-css": "^1.4.0",
     "typescript": "^5.7.2",
     "vite": "^7.1.7",
