--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "zustand": "^5.0.9"
   },
   "devDependencies": {
+    "@sparticuz/chromium": "^131.0.0",
     "@tanstack/devtools-vite": "^0.3.11",
     "@tanstack/eslint-config": "^0.3.0",
     "@testing-library/dom": "^10.4.0",
@@ -51,6 +52,7 @@
     "jsdom": "^27.0.0",
     "prettier": "^3.5.3",
     "puppeteer": "^24.34.0",
+    "puppeteer-core": "^24.34.0",
     "serve-handler": "^6.1.6",
     "tw-animate-css": "^1.4.0",
     "typescript": "^5.7.2",
